          Speeded up parsing significantly.
      - SourceVersion:
        - Rewritten parsing the version entry using different approach.
        - Support 'Binary' field span to multiple lines.
        - Support native packages with dashed version strings with a warning.
        - Recognize ".debian.tar.<ext>" files as diffs.
        - New field 'others'.
    - System:
      - Resolvers/Native:
        - Don't pre-schedule any relations for newly-installed versions, leave
          all work to main resolver.
        - Don't try to remove the same unsynchronizeable package multiple
          times.
        - Fixed 'full' flavor of the resolver in non-debug mode.
        - Fixed too high factor for deleting unsynchronizeable packages.
        - Implemented shallow copying for solutions. Significantly reduces
          the average RAM footprint for a solution.
        - Don't try to remove the unsynchronizeable package if the stick is
          set.
        - Adjusted calculating action weights so installing an extra package
          gains almost nothing.
        - When 'cupt::resolver::synchronize-source-versions' is set, try use
          source versions if available to speed-up processing.
        - Don't perform re-synchronization if the source version has several
          appropriate binary versions.
        - Adjusted the effect of the 'cupt::resolver::quality-bar' option so
          it affects the less the longer solution is.
      - Worker:
        - Don't use File::Path module. Thanks to Bernd Zeimetz.
          (Closes: #553629)
    - Config:
      - Fixed the typo to properly don't check option names for all
        'unattended-upgrade::*' options. Thanks to Jean-Christophe Dubacq.
        (Closes: #547951)
      - Changed the default value of the 'cupt::resolver::quality-bar' option
        from -250 to 0.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Fri, 30 Oct 2009 13:54:43 +0200

cupt (1.2.1) unstable; urgency=medium

  * cupt: