@@ -20,6 +20,7 @@ cupt (1.3.0) UNRELEASED; urgency=low
         - Support native packages with dashed version strings with a warning.
         - Recognize ".debian.tar.<ext>" files as diffs.
         - New field 'others'.
+        - [API break] 'uploaders': became reference to array instead of string.
     - System:
       - Resolvers/Native:
         - Don't pre-schedule any relations for newly-installed versions, leave
